Sat Aug 27 18:17:58 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* strftime.c (rb_strftime_with_timespec): get enc argument to specify
	  the encoding of the format. On Windows (at least Japanese Windows),
	  Time#strftime("%Z") includes non ASCII in locale encoding (CP932).
	  So convert locale to default internal. [ruby-core:39092] [Bug #5226]

	* strftime.c (rb_strftime): ditto.

	* strftime.c (rb_strftime_timespec): ditto.

	* internal.h (rb_strftime_timespec): follow above.

	* time.c (rb_strftime_alloc): ditto.

	* time.c (strftimev): ditto.

	* time.c (time_strftime): ditto.

	* time.c (time_to_s): the resulted string of Time#to_s is always
	  ascii only, so this should be US-ASCII.

	* time.c (time_asctime): ditto.

Sat Aug 27 11:18:12 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* Revert r33078. It caused a Rails application NoMethodError.

	  /home/nahi/git/emptyApp/ruby/1.9.1/gems/rack-mount-0.6.14/lib/rack/mount/utils.rb:157: warning: toplevel constant ScanError referenced by Regin::Parser::ScanError
	  /home/nahi/git/emptyApp/ruby/1.9.1/gems/rack-mount-0.6.14/lib/rack/mount/vendor/regin/regin/parser.rb:17:in `parse_regexp': undefined method `scan_str' for #<Regin::Parser:0x00000002344548> (NoMethodError)

Sat Aug 27 08:44:58 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc:  Import RDoc 3.9.4.  Typo and grammar fixes by Luke Gruber.
	  [Ruby 1.9 - Bug #5203]

Sat Aug 27 07:53:34 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/open-uri.rb:  Fix indentation of OpenURI::OpenRead#open.  Use ++
	  instead of `' for method arguments in open-uri.rb

Sat Aug 27 07:22:07 2011  Eric Hodel  <drbrain@segment7.net>

	* ext/pathname/lib/pathname.rb:  Fix typos and grammar mistakes.  Patch
	  by Luke Gruber.  [#5203]
	* ext/pty/lib/expect.rb:  ditto
	* lib/mathn.rb:  ditto
	* lib/net/http.rb:  ditto
	* lib/open-uri.rb:  ditto
	* lib/ostruct.rb:  ditto
	* lib/tempfile.rb:  ditto
	* lib/thread.rb:  ditto
	* lib/weakref.rb:  ditto